--- a/navbar/src/components/navbar/Navbar.css
+++ b/navbar/src/components/navbar/Navbar.css
@@ -8,6 +8,10 @@ nav {
   z-index: 99;
 }
 
+.menu-icon {
+  display: none;
+}
+
 .logo {
   font-weight: 600;
   font-size: 25px;
@@ -42,9 +46,54 @@ nav {
   border-radius: 2px;
 }
 
-.menu-list li a:hover {
+.menu-list li a:hover,
+.menu-list li a.active {
   background-color: #fff;
   border-radius: 2px;
   color: #000;
   transition: all 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 800px) {
+  .logo {
+    font-size: 20px;
+  }
+
+  .menu-list li a {
+    font-size: 14px;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .menu-icon {
+    display: block;
+  }
+
+  .menu-list {
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    right: 0;
+    top: 64px;
+  }
+
+  .menu-list li {
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .menu-list li:last-child {
+    margin-bottom: 0px;
+  }
+
+  .menu-list li a,
+  .menu-list li:last-child a {
+    width: 100px;
+    display: block;
+    margin: auto;
+  }
 }
